2003-07-11  Alexandre Duret-Lutz  <adl@gnu.org>

	* obstack.h (__INT_TO_PTR): Revert change of 2003-03-13;
	it breaks C++ compilation.
	[!__GNUC__ || !__STDC__] (obstack_finish): Cast result to void*.

2003-07-10  Jim Meyering  <jim@meyering.net>

	* vasnprintf.c: Remove trailing blanks.
	Make cpp indentation consistent.

2003-07-09  Paul Eggert  <eggert@twinsun.com>

	* alloca_.h, euidaccess.c, getpass.c, memrchr.c, obstack.h,
	posixver.c, strftime.c, strnlen.c, strverscmp.c:
	Switch from LGPL to GPL.

2003-07-07  Paul Eggert  <eggert@twinsun.com>

	* mktime.c: Fix some boundary cases and remove need for floating point.

	Issue a compile-time diagnostic if time_t is floating point, or if
	two's complement arithmetic is not in effect, or if arithmetic
	right shift does not propagate the sign.  These assumptions were
	all in the original code but they weren't checked.

	(TIME_T_MIDPOINT, verify): New macros.
	(__isleap): Remove; it has integer overflow problems.
	(leapyear): New function, without those problems.
	(ydhms_tm_diff): Remove; splitting into two parts.
	(ydhms_diff): New function, containing the arithmetic part of
	the old ydhms_tm_diff function.  Issue a compile-time
	diagnostic if we are not using C99 integer division.
	Avoid casts when possible.
	(guess_time_tm): New function, containing the checking part of
	the old ydhms_tm_diff function.  Return the new value, rather than
	the difference between it and the old.  Accept a new argument T
	so that *T specifies the old value.  Check for overflow in the result.

	(__mktime_internal): Use a time_t offset, not a long int offset.
	This undoes the 2003-06-04 change, which is no longer needed now
	that we have better overflow checking.
	(localtime_offset): Likewise.

	(__mktime_internal): Avoid harmful overflow on hosts where time_t
	and long are 64-bit but int is only 32-bit.
	(ydhms_diff): Use long int to store year1 and yday1.
	Issue a compile-time diagnostic if long int is not wide enough.
